--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,20 @@
-<h1>Welcome</h1>
-  <% if current_user %>
-    <p>Welcome, <%= current_user.name %></p>
-    <%= link_to "Logout", logout_path %>
-  <% else %>
-    <%= link_to "Login", login_path %>
-  <% end %>
+<nav>
+  <div class="nav-wrapper">
+    <a href="/" class="brand-logo">SweeterTweeter</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <% if current_user %>
+        <%#= current_user.twitter.friends.take(2) %>
+        <%= link_to "Logout", logout_path %>
+      <% else %>
+        <%= link_to "Login", login_path %>
+      <% end %>
+    </ul>
+  </div>
+</nav>
+
+<% if current_user %>
+  <%#= current_user.twitter.friends.take(2) %>
+  <p>Welcome, </p><%= current_user.name %>
+<% else %>
+  <%= link_to "Login", login_path %>
+<% end %>
