--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,30 @@
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper cyan lighten-2">
+      <div>
+        <a href="/" class="brand-logo thinFont"><span class="sideMargin15 large material-icons">person_pin</span>SweeterTweeter</a>
+      </div>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <% if current_user %>
+          <%#= current_user.twitter.friends.take(2) %>
+          <%= link_to "Logout", logout_path %>
+        <% else %>
+          <%= link_to "Login", login_path %>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
 
-<%= yield %>
+  <div class="container thinFont">
+
+    <%= yield %>
+
+  </div>
 
 </body>
 </html>
