--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -4,3 +4,15 @@
 .sideMargin15 {
   margin: 0 15px;
 }
+.announcementBox {
+  background-color: white;
+  text-align: center;
+  width: 100%;
+  min-height: 400px;
+  border-radius: 25px;
+  padding: 30px;
+  margin: 50px 0;
+}
+.marginTop50 {
+  margin-top: 50px;
+}
