--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,13 @@
-<% if current_user %>
-  <%#= current_user.twitter.friends.take(2) %>
-  <h2>Welcome, <%= current_user.name %></h2>
-<% else %>
-  <%= link_to "Login", login_path %>
-<% end %>
+<div class="announcementBox">
+  <% if current_user %>
+    <%#= current_user.twitter.friends.take(2) %>
+    <h3>Welcome, <%= current_user.name %></h3>
+    <div class="marginTop50 waves-effect waves-light btn-large cyan lighten-2">
+      <%= button_to "View Profile", profile_path, method: :get %>
+    </div>
+
+    <%#= current_user.twitter.followers_count %>
+  <% else %>
+    <%= link_to "Login", login_path %>
+  <% end %>
+</div>
