--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -5593,7 +5593,8 @@ html {
 
 h1, h2, h3, h4, h5, h6 {
   font-weight: 100;
-  line-height: 1.1; }
+  line-height: 1.1;
+  color: #292f33; }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit; }
