--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -36,7 +36,19 @@
   height: 70px;
   padding: 10px;
 }
+.timelinePhoto {
+  width: 50px;
+  height: 50px;
+  margin: 18px 10px 10px 0;
+}
+.width80 {
+  width: 80%
+}
 
+.timelineTweetText{
+  width: 100%;
+  border-bottom: 1px solid #8899a6;
+}
 #profileSidebar {
   width: 30%;
   margin-right: 5%;
