--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,17 +1,19 @@
 <div class="row">
   <div class="col s4">
-    <img id="profilePhoto" src='<%#= current_user.profile_photo %>'>
-    <h4 class="zeroMarginBottom"><%#= current_user.name %></h4>
-    <p class="zeroMargin lightGreyText">@<%#= current_user.handle %></p>
+    <img id="profilePhoto" src='<%= current_user.profile_photo %>'>
+    <h4 class="zeroMarginBottom"><%= current_user.name %></h4>
+    <p class="zeroMargin lightGreyText">@<%= current_user.handle %></p>
     <p><%= current_user.bio %></p>
   </div>
 
   <div class="col s7 offset-s1" id="profileMain">
 
-      <div id="statusForm">
+      <div class="marginBottom50" id="statusForm">
         <%= form_tag("/status", method: "post") do %>
-          <%= text_area_tag(:tweet, "", size: "800x80") %>
-          <div class="marginTop50 waves-effect waves-light btn cyan lighten-2">
+          <div class="flow-text">
+            <%= text_area_tag(:tweet, "", size: "800x80", placeholder: "What would you like to say?") %>
+          </div>
+          <div class="right waves-effect waves-light btn cyan lighten-2">
             <%= submit_tag "Tweet" %>
           </div>
         <% end %>
@@ -20,22 +22,22 @@
       <div id="statsCounter">
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Favorites</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.favorites_count %></h5>
+          <h5 class="zeroMargin"><%= current_user.favorites_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>SweetTweets</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.tweet_count %></h5>
+          <h5 class="zeroMargin"><%= current_user.tweet_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Following</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.following_count %></h5>
+          <h5 class="zeroMargin"><%= current_user.following_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Followers</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.follower_count %></h5>
+          <h5 class="zeroMargin"><%= current_user.follower_count %></h5>
         </div>
       </div>
 
@@ -46,7 +48,11 @@
             <div class="col 8 width80">
               <p class="timelineTweetText"><%= tweet.user.name %></p>
               <p><%= tweet.text %></p>
-              <%= link_to "Favorite", favorites_path(tweet_id: tweet.id), method: :post %>
+              <% if tweet.favorited? %>
+                <i class="material-icons"><%= link_to "thumb_down", favorites_path(tweet_id: tweet.id), method: :delete %></i>
+              <% else %>
+                <i class="material-icons"><%= link_to "thumb_up", favorites_path(tweet_id: tweet.id), method: :post %></i>
+              <% end %>
             </div>
           </div>
         <% end %>
