--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,8 +1,8 @@
 <div class="row">
   <div class="col s4">
-    <img id="profilePhoto" src='<%= current_user.profile_photo %>'>
-    <h4 class="zeroMarginBottom"><%= current_user.name %></h4>
-    <p class="zeroMargin lightGreyText">@<%= current_user.handle %></p>
+    <img id="profilePhoto" src='<%#= current_user.profile_photo %>'>
+    <h4 class="zeroMarginBottom"><%#= current_user.name %></h4>
+    <p class="zeroMargin lightGreyText">@<%#= current_user.handle %></p>
     <p><%= current_user.bio %></p>
   </div>
 
@@ -22,22 +22,22 @@
       <div id="statsCounter">
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Favorites</strong></p>
-          <h5 class="zeroMargin"><%= current_user.favorites_count %></h5>
+          <h5 class="zeroMargin"><%#= current_user.favorites_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>SweetTweets</strong></p>
-          <h5 class="zeroMargin"><%= current_user.tweet_count %></h5>
+          <h5 class="zeroMargin"><%#= current_user.tweet_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Following</strong></p>
-          <h5 class="zeroMargin"><%= current_user.following_count %></h5>
+          <h5 class="zeroMargin"><%#= current_user.following_count %></h5>
         </div>
 
         <div class="col s3 centerText">
           <p class="lightGreyText zeroMargin"><strong>Followers</strong></p>
-          <h5 class="zeroMargin"><%= current_user.follower_count %></h5>
+          <h5 class="zeroMargin"><%#= current_user.follower_count %></h5>
         </div>
       </div>
 
@@ -49,7 +49,7 @@
               <p class="timelineTweetText"><%= tweet.user.name %></p>
               <p><%= tweet.text %></p>
               <% if tweet.favorited? %>
-                <i class="material-icons"><%= link_to "thumb_down", favorites_path(tweet_id: tweet.id), method: :delete %></i>
+                <p>Favorited!</p>
               <% else %>
                 <i class="material-icons"><%= link_to "thumb_up", favorites_path(tweet_id: tweet.id), method: :post %></i>
               <% end %>
