--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,62 +1,11 @@
 <div class="row">
   <div class="col s4">
-    <img id="profilePhoto" src='<%#= current_user.profile_photo %>'>
-    <h4 class="zeroMarginBottom"><%#= current_user.name %></h4>
-    <p class="zeroMargin lightGreyText">@<%#= current_user.handle %></p>
-    <p><%= current_user.bio %></p>
+    <%= render partial: 'shared/user_info' %>
   </div>
 
   <div class="col s7 offset-s1" id="profileMain">
-
-      <div class="marginBottom50" id="statusForm">
-        <%= form_tag("/status", method: "post") do %>
-          <div class="flow-text">
-            <%= text_area_tag(:tweet, "", size: "800x80", placeholder: "What would you like to say?") %>
-          </div>
-          <div class="right waves-effect waves-light btn cyan lighten-2">
-            <%= submit_tag "Tweet" %>
-          </div>
-        <% end %>
-      </div>
-
-      <div id="statsCounter">
-        <div class="col s3 centerText">
-          <p class="lightGreyText zeroMargin"><strong>Favorites</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.favorites_count %></h5>
-        </div>
-
-        <div class="col s3 centerText">
-          <p class="lightGreyText zeroMargin"><strong>SweetTweets</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.tweet_count %></h5>
-        </div>
-
-        <div class="col s3 centerText">
-          <p class="lightGreyText zeroMargin"><strong>Following</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.following_count %></h5>
-        </div>
-
-        <div class="col s3 centerText">
-          <p class="lightGreyText zeroMargin"><strong>Followers</strong></p>
-          <h5 class="zeroMargin"><%#= current_user.follower_count %></h5>
-        </div>
-      </div>
-
-      <div id="recentTweets">
-        <% current_user.timeline.each do |tweet| %>
-          <div class="">
-            <div class="col 2"><img class="timelinePhoto" src='<%= tweet.user.profile_image_uri %>'></div>
-            <div class="col 8 width80">
-              <p class="timelineTweetText"><%= tweet.user.name %></p>
-              <p><%= tweet.text %></p>
-              <% if tweet.favorited? %>
-                <p>Favorited!</p>
-              <% else %>
-                <i class="material-icons"><%= link_to "thumb_up", favorites_path(tweet_id: tweet.id), method: :post %></i>
-              <% end %>
-            </div>
-          </div>
-        <% end %>
-      </div>
+    <%= render partial: 'shared/tweet_form' %>
+    <%= render partial: 'shared/stats' %>
+    <%= render partial: 'shared/timeline' %>
   </div>
-
 </div>
